# accenture-adm-crew

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
.chainlit/: config.toml
docs/: architecture.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/guides/: chainlit-ui.mdx  customization.mdx  deliverables.mdx  models.mdx  running-the-crew.mdx
docs/reference/: agents.mdx  configuration.mdx  tasks.mdx  tools.mdx
src/accenture_adm_hierarchical_delivery_crew/: AGENTS.md  crew.py  main.py
src/accenture_adm_hierarchical_delivery_crew/config/: agents.yaml  tasks.yaml
src/accenture_adm_hierarchical_delivery_crew/tools/: ask_human.py
