[project]
name = "accenture_adm_hierarchical_delivery_crew"
version = "0.1.0"
description = "accenture_adm_hierarchical_delivery_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.13.0",
]

[project.scripts]
accenture_adm_hierarchical_delivery_crew = "accenture_adm_hierarchical_delivery_crew.main:run"
run_crew = "accenture_adm_hierarchical_delivery_crew.main:run"
train = "accenture_adm_hierarchical_delivery_crew.main:train"
replay = "accenture_adm_hierarchical_delivery_crew.main:replay"
test = "accenture_adm_hierarchical_delivery_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
